# testpy

./: Jenkinsfile  pyproject.toml  tox.ini
tests/: test_sample.py
